# discord_bot

./: .gitignore  CMakeLists.txt  README.md  bot_client.cpp  bot_client.hpp  command.cpp  command.hpp  config.json  constants.hpp  hash.hpp  main.cpp  mention.cpp  mention.hpp  server_bot_settings.cpp  server_bot_settings.hpp  server_cache.cpp  server_cache.hpp  server_info.json
